Fix alignment/stacking of team member blocks on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -768,17 +768,8 @@ ul.sub-menu {
     width: 100%;
 }
 
-#team {
-    padding: 85px 0;
-}
-
-#team-carousel {
-    margin-top: 80px;
-}
-
-#company-information .padding-top {
-    padding-top: 172px;
-
+#company-information {
+    padding-top: 10px;
 }
 
 .single-service img {
